Add event listener to board

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
   <script defer src="main.js"></script>
 </head>
 <body>
-  <h1></h1>
+  <header>TIKI-TAC-TOE</header>
+  <h1 id="msg"></h1>
+  <section id="board">
+    <div id="box0">0</div>
+    <div id="box1">1</div>
+    <div id="box2">2</div>
+    <div id="box3">3</div>
+    <div id="box4">4</div>
+    <div id="box5">5</div>
+    <div id="box6">6</div>
+    <div id="box7">7</div>
+    <div id="box8">8</div>
+  </section>
+
+  <button>PLAY AGAIN</button>
 </body>
 </html>
