--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   <header>TIKI-TAC-TOE</header>
   <h1 id="msg"></h1>
   <section id="board">
-    <div id="box0">0</div>
-    <div id="box1">1</div>
-    <div id="box2">2</div>
-    <div id="box3">3</div>
-    <div id="box4">4</div>
-    <div id="box5">5</div>
-    <div id="box6">6</div>
-    <div id="box7">7</div>
-    <div id="box8">8</div>
+    <div id="c0r2">2</div>
+    <div id="c1r2">5</div>
+    <div id="c2r2">8</div>
+    <div id="c0r1">1</div>
+    <div id="c1r1">4</div>
+    <div id="c2r1">7</div>
+    <div id="c0r0">0</div>
+    <div id="c1r0">3</div>
+    <div id="c2r0">6</div>
   </section>
 
   <button>PLAY AGAIN</button>
