--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Stick&display=swap" rel="stylesheet">
   <script defer src="main.js"></script>
 </head>
 <body>
   <header>TIKI-TAC-TOE</header>
   <h1 id="msg"></h1>
   <section id="board">
-    <div id="c0r2">2</div>
-    <div id="c1r2">5</div>
-    <div id="c2r2">8</div>
-    <div id="c0r1">1</div>
-    <div id="c1r1">4</div>
-    <div id="c2r1">7</div>
-    <div id="c0r0">0</div>
-    <div id="c1r0">3</div>
-    <div id="c2r0">6</div>
+    <div id="box0" class="square"></div>
+    <div id="box1" class="square"></div>
+    <div id="box2" class="square"></div>
+    <div id="box3" class="square"></div>
+    <div id="box4" class="square"></div>
+    <div id="box5" class="square"></div>
+    <div id="box6" class="square"></div>
+    <div id="box7" class="square"></div>
+    <div id="box8" class="square"></div>
   </section>
 
   <button>PLAY AGAIN</button>
